tests/e2e/nested_service_block.error
Error: syntax error in story at line 2, column 5

2|        http server as c2
          ^^^^^

E0065: Nested service blocks are not allowed
