tests/e2e/nested_service_block.story
http server as c1
    http server as c2
        x = 1
